5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_1804.log
== TEST (2019-03-22 15:09:19) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:")
xb=float(input("Insira o valor de Xb:")
ya=float(input("Insira o valor de Ya:")
yb=float(input("Insira o valor de Yb:")

Dab=(xb-xa)**2 + (yb-ya)**2
print(Dab)
-- ERROR:
File "XXXX", line 3
    xb=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:09:39) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa)**2 + (yb-ya)**2
print(Dab)
-- OUTPUT:
949.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:10:31) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa)**2 + (yb-ya)**2
t=sqr(Dab)
print(round(t,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    t=sqr(Dab)
NameError: name 'sqr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:11:05) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa)**2 + (yb-ya)**2
t=sqrt(Dab)
print(round(t,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:11:13) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa)**2 + (yb-ya)**2
t=sqrt(Dab)
print(round(t,3))
-- EXECUTION TIME:
0.125635
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:12:05) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=sqrt((xb-xa)**2 + (yb-ya)**2)

print(round(Dab,3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 15:12:17) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=sqrt((xb-xa)**2 + (yb-ya)**2)

print(round(Dab,3))
-- EXECUTION TIME:
0.137049
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 15:12:42) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=sqrt((xb-xa**2) + (yb-ya**2))

print(round(Dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Dab=sqrt((xb-xa**2) + (yb-ya**2))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:03:25) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa**2) + (yb-ya**2)**0.5

print(round(Dab,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(Dab,3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:47) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa**2) + (yb-ya**2)**0.5

print(round(Dab,3))
-- EXECUTION TIME:
0.150621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 9, in <module>
    print(round(Dab,3))
TypeError: type complex doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:49) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa**2) + (yb-ya**2)**0.5

print(round(Dab,3))
-- EXECUTION TIME:
0.147704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 9, in <module>
    print(round(Dab,3))
TypeError: type complex doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:17) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa**2) + (yb-ya**2)
total=sqrt(Dab)

print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=sqrt(Dab)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:56:29) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa**2) + (yb-ya**2)
total=(sqrt(Dab))

print(round(total,3))
-- EXECUTION TIME:
0.171763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 8, in <module>
    total=(sqrt(Dab))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:31) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

Dab=(xb-xa**2) + (yb-ya**2)
total=(sqrt(Dab))

print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=(sqrt(Dab))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:06) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa**2) + (yb-ya**2)
total=(sqrt(ab))

print(round(total,3))
-- EXECUTION TIME:
0.130905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 8, in <module>
    total=(sqrt(ab))
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:06) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa**2) + (yb-ya**2)
total=(sqrt(ab))

print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=(sqrt(ab))
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:53) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa**2) + (yb-ya**2)
total=ab**0.5

print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(total,3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:58:24) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa**2) + (yb-ya**2)
total= ab**0.5

print(round(total, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(total, 3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:59:35) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb-xa)**2 + (yb-ya)**2)**0.5


print(round(ab, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:59:52) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2


print(round(ab, 3))
-- OUTPUT:
949.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:00:16) 
-- CODE:
from math import*
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb-xa)**2) + ((yb-ya)**2)


print(round(ab, 3))
-- OUTPUT:
949.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:00:40) 
-- CODE:

xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb-xa)**2) + ((yb-ya)**2)


print(round(ab, 3))
-- OUTPUT:
949.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:11:32) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb-xa)**2) + ((yb-ya)**2)
t=ab**0.5

print(round(t, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:11:40) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb-xa)**2) + ((yb-ya)**2)
t=ab**0.5

print(round(t, 3))
-- EXECUTION TIME:
0.135043
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:11:53) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=ab**0.5

print(round(t, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:12:58) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb**2)-(xa**2)) + ((yb**2)-(ya**2))
t=ab**0.5

print(round(t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:13:04) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb**2)-(xa**2)) + ((yb**2)-(ya**2))
t=ab**0.5

print(round(t, 3))
-- EXECUTION TIME:
0.140159
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:13:05) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=((xb**2)-(xa**2)) + ((yb**2)-(ya**2))
t=ab**0.5

print(round(t, 3))
-- EXECUTION TIME:
0.135041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:17:55) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2)-(xa**2) + (yb**2)-(ya**2)
t=ab**0.5

print(round(t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:19:38) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2-xa**2) + (yb**2-ya**2)
t=ab**0.5

print(round(t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 16:19:42) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2-xa**2) + (yb**2-ya**2)
t=ab**0.5

print(round(t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 16:19:47) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2-xa**2) + (yb**2-ya**2)
t=ab**0.5

print(round(t, 3))
-- EXECUTION TIME:
0.158432
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/1804/main.py", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:06:21) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2-xa**2) + (yb**2-ya**2)
t=ab**0.5

print(round(t, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(t, 3))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:06:30) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2-xa**2) + (yb**2-ya**2)
t=ab**0.5

print(round(a, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(a, 3))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:06:41) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb**2-xa**2) + (yb**2-ya**2)
t=ab**0.5

print(round(ab, 3))
-- OUTPUT:
-471.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:07:10) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=ab**0.5

print(round(ab, 3))
-- OUTPUT:
949.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:07:21) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=ab**0.5

print(round(t, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:07:28) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=ab**0.5

print(round(t, 3))
-- EXECUTION TIME:
0.131874
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:16:25) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=(ab**0.5) * 2

print(round(t, 3))
-- OUTPUT:
61.612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:16:31) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=(ab**0.5) * 2

print(round(t, 3))
-- EXECUTION TIME:
0.15757
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
61.612
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
6.478
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:17:33) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=ab**0.5

print(round(t, 3))
-- EXECUTION TIME:
0.139105
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.806
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.239
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
1.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:28:13) 
-- CODE:
xa=float(input("Insira o valor de Xa:"))
xb=float(input("Insira o valor de Xb:"))
ya=float(input("Insira o valor de Ya:"))
yb=float(input("Insira o valor de Yb:"))

ab=(xb-xa)**2 + (yb-ya)**2
t=ab**0.5

print(round(t, 3))
-- OUTPUT:
30.806
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
